--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,9 +15,8 @@ body {
   height: 100vh;
   font-family: "Montserrat", sans-serif;
   background-color: #343d4b;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  place-content: center;
 }
 
 .container {
