--- a/src/components/Weather/weather.css
+++ b/src/components/Weather/weather.css
@@ -33,6 +33,9 @@
 .date-dayname {
   margin: 0;
 }
+.date-dayname::first-letter {
+  text-transform: uppercase;
+}
 
 .date-day {
   display: block;
@@ -69,6 +72,9 @@
 
 .weather-desc {
   margin: 0;
+}
+.weather-desc::first-letter {
+  text-transform: uppercase;
 }
 
 .info-side {
@@ -131,6 +137,10 @@
   text-align: center;
 }
 
+.week-list > li .day-name::first-letter {
+  text-transform: uppercase;
+}
+
 .week-list > li .day-icon {
   display: block;
   height: 30px;
@@ -174,4 +184,21 @@
 
 .weather-icon {
   transform: translateX(-1.5rem);
+}
+.lang {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+.icon-location {
+  display: inline-block;
+  border: 0;
+  background: transparent;
+  width: 1.6rem;
+  padding: 0;
+  cursor: pointer;
+}
+.icon-location img {
+  width: 100%;
+  vertical-align: middle;
 }
